{
  "appName": {
    "full": "Star Key wallet",
    "short": "Star Key",
    "initials": "SK"
  },
  "Congratulations": "Congratulations",
  "bioMetrics_fallBackText": "Enter password",
  "Download": "Download",
  "Copy": "Copy",
  "Tap_to_reveal": "Tap to reveal",
  "Secret_phrase_copied_to_clipboard_successfully": "Recovery phrase has been copied to clipboard",
  "This_phrase_is_for_all_Network": "This phrase is for all Network",
  "Enter_your_secret_recovery_phrase": "Enter your secret recovery phrase",
  "Invalid_seed_phrase": "Incorrect secret recovery phrase",
  "Next": "Next",
  "Wallet": "Wallet",
  "Swap": "Swap",
  "Buy": "Buy",
  "Stake": "Stake",
  "Settings": "Settings",
  "Search": "Search",
  "Connected": "Connected",
  "Not_connected": "Not connected",
  "Sort_by": "Sort by",
  "Done": "Done",
  "Filter": "Filter",
  "Clear": "Clear",
  "Send": "Send",
  "Receive": "Receive",
  "Receive_ETH": "Receive ETH",
  "secretAddressInfoText": "The anonymous address generated by $t(common:appName.full) makes the transaction untraceable. Users can use the address to send or receive assets secretly.",
  "Secret_Address": "Secret Address",
  "Save": "Save",
  "Share": "Share",
  "Sent": "Sent",
  "Received": "Received",
  "Swapped_to_other_token": "Swapped to other token",
  "Swapped_from_other_token": "Swapped from other token",
  "Sign": "Sign",
  "By_Main_Networks": "By Main Networks",
  "By_Test_Networks": "By Test Networks",
  "Alphabetically": "Alphabetically",
  "Favorites": "Favorites",
  "Highest_value": "Highest value",
  "Lowest_value": "Lowest value",
  "Store_your_secret_recovery_phrase_somewhere_safe": "Store your secret recovery phrase somewhere safe",
  "If_you_lose_your_phrase_you_wont_be_able_to_access_your_wallet": "If you lose your phrase, you won't be able to access your wallet",
  "Never_show_the_phrase_to_anyone": "Never show the phrase to anyone",
  "Wallet_address_copied": "Copied",
  "Price": "Price",
  "WARNING": "WARNING",
  "Recover_wallet": "Recover wallet",
  "Recovery_methods": "Recovery methods",
  "Files_recovery": "Files recovery",
  "iCloud": "iCloud",
  "gDrive": "Google Drive",
  "Device": "Device",
  "Guardian": "Guarantor",
  "Use_the_backup_files_from_iCloud_device_and_a_guarantor": "Use the backup files from iCloud, device and a guarantor",
  "Use_the_backup_files_from_gDrive_device_and_a_guarantor": "Use the backup files from google Drive, device and a guarantor",
  "Secret_Phrase_Recovery": "Secret Phrase Recovery",
  "Use_the_secret_recovery_phrase_you_have_saved": "Use the secret recovery phrase you have saved",
  "Social_Recovery": "Social Recovery",
  "Ask_guarantors_to_approve_your_recovery_requests": "Ask guarantors to approve your recovery requests",
  "Geo_Recovery": "Geo Recovery",
  "Go_to_the_3_locations_you_set_before_and_unlock_all_of_them": "Go to the 3 locations you set before and unlock all of them",
  "Store_your_key_backups_in_3_different_locations": "Store your key backups in 3 different locations",
  "Take_full_control_and_be_responsible_of_your_own_key": "Take full control and be responsible of your own key",
  "PRO": "PRO",
  "Easy": "EASY",
  "recoverWalletUsingRecoveryPhraseWarning1": "If you reset using another Secret Recovery Phrase, your current wallet, accounts and assets will be removed from this app permanently.\n\nThis action cannot be undone.",
  "backUpRecoveryPhraseWarningArray1": "Store your secret recovery phrase somewhere safe",
  "backUpRecoveryPhraseWarningArray2": "If you lose your phrase, you won’t be able to access your wallet",
  "backUpRecoveryPhraseWarningArray3": "Never show the phrase to anyone",
  "Backup_your_wallet": "Backup your wallet",
  "Backup": "Backup",
  "BackUpRestoreWalletUsingIcloud_description": "Backup your key to iCloud and restore to any device that is signed in to your iCloud account",
  "BackUpRestoreWalletUsingIcloud_description1": "Backup your key to Google drive and restore to any device that is signed in to your Google drive account",
  "BackUpRestoreWalletUsingDevice_description": "Save your key backup as a file. You will need to import this backup to access your account on a new device",
  "BackUpRestoreWalletUsingGuarantor_description": "Share one of the files to someone you trust and ask him/her to keep it for you. You will be asked to import the file when in need of a recovery\n\nThe guarantor do not have access to your accounts and assets",
  "add": "Add",
  "cancel": "Cancel",
  "from": "From",
  "to": "To",
  "address_book": "Address Book",
  "username_or_address": "Account name or address",
  "Address_or_label": "Address or label",
  "enter_username_or_address": "Enter address",
  "enter_valid_username_or_address": "Enter valid address",
  "max": "MAX",
  "max_fee": "Max Fee",
  "estimated_gas_fee": "Estimated Gas Fee",
  "estimated_time": "Estimated Time",
  "gwei_amount": "{{amount}} $t(common:gwei)",
  "seconds": "< {{seconds}} seconds",
  "amount": "Amount",
  "enter_amount": "Enter amount",
  "enter_valid_amount": "Enter valid amount",
  "review_transaction": "Review transaction",
  "total_cost": "Total Cost",
  "network_fee": "Network Fee",
  "cancel_transaction": "Cancel Transaction",
  "view_transaction_on_explorer": "View on Explorer",
  "this_transaction_requires": "This transaction requires",
  "block_confirmations": " 12 block confirmations ",
  "to_be_completed": "to be completed",
  "ok": "OK",
  "no_thanks": "No, thanks",
  "cancel_transaction_des": "You will still be charged the below gas fee. This action can not be undone.",
  "Log_Out": "Log Out",
  "Version": "Version",
  "cameraAccess": "Camera access is restricted. In order to use Camera Service, please enable Camera permission in the setting app under Privacy.",
  "open_settings": "Open Settings",
  "This_file_is_already_selected": "File already selected",
  "invalid_file": "Invalid file",
  "file_not_found!": "File not found!",
  "Seed_recovery_failed_try_with_valid_files": "Seed recovery failed, try with valid files!",
  "File_decryption_failed_try_with_valid_password_and_file": "Invalid File password or incorrect file(s) provided. Please double-check and try again.",
  "Recovery_Folder_does_not_exist": "Recovery Folder does not exist",
  "Recovery_File_does_not_exist": "Recovery File does not exist",
  "Google_login_failed": "Google login failed!",
  "something_went_wrong_please_try_again": "Something went wrong please try again",
  "internetOff": "No Internet connection found.\nCheck your connection.",
  "oops": "Ooops!",
  "types": {
    "viewInfo": "view_info",
    "toggle": "toggle",
    "config": "config",
    "cmsPage": "cms_page"
  },
  "toggle_types": {
    "tokenBalance": "tokenBalance",
    "analytics": "analytics",
    "faceId": "faceId",
    "accountBalance": "accountBalance",
    "Test_Mode": "Test_Mode"
  },
  "tab_types": {
    "search": "Search",
    "custom_tokens": "Custom Tokens",
    "address": "Address",
    "username": "Username",
    "mainnet": "Mainnet",
    "testnet": "Testnet",
    "basic": "Basic",
    "pro": "PRO"
  },
  "log_out_description": "You will need to use Face ID or enter the passcode to log in again",
  "hidden_symbol": "**",
  "or": "or",
  "saved_to_gallery": "Saved to gallery",
  "error_saved_to_gallery": "Failed to Saved to gallery check permission and try again!",
  "token_hidden": "Token hidden",
  "added_to_favorites": "Added to Favorites",
  "removed_from_favorites": "Removed from Favorites",
  "choose_2_file_recovery_locations": "Choose 2 file recovery locations",
  "invalid_authentication": "Invalid authentication!",
  "gwei": "Gwei",
  "apply": "Apply",
  "backUpRecoveryPhraseWarning": "Store your secret recovery phrase somewhere safe and never show the phrase to anyone",
  "view_as": "View As",
  "default": "Default",
  "notifications": "Notifications",
  "address_removed": "Address removed",
  "accounts": "Accounts",
  "imported_account": "Imported Account",
  "create_sub_account": "Create Sub Account",
  "import_account": "Import Account",
  "create_sub_account_title": "Create sub account",
  "Recover_wallet_title": "Import account",
  "Edit_account_title": "Edit account",
  "screen_types": {
    "createSubAccount": "CreateSubAccount",
    "importAccount": "ImportAccount",
    "createAccount": "CreateAccount",
    "editAccount": "EditAccount"
  },
  "notify_user_checkbox_desc": "Notify all users who interact with this account that you’ve changed the account name",
  "create_account_sub_title": "Your account name will become the name of your main account and the prefix of your sub-accounts. You can change the account names at any time",
  "insufficient_balance": "Insufficient balance",
  "insufficient_balance_description": "You do not have enough balance in your account to complete this transaction. Please ensure that your account has sufficient funds to cover the transaction amount and any associated fees.",
  "Insufficient_Balance_After_Gas_Fees_deduction": "Insufficient Balance After Gas Fees Deduction",
  "Insufficient_Balance_After_Gas_Fees_deduction_description": "You currently have enough balance to perform this transaction, but after deducting the gas fees, your account balance will be insufficient to complete the transaction. Please make sure you have enough funds to cover both the transaction amount and associated gas fees.",
  "Leave_some_gas_fee": "Leave some gas fee",
  "Leave_some_gas_fee_description": "Would you like to auto adjust the MAX amount to leave some gas fee?",
  "Adjust": "Adjust",
  "No_thanks": "No, thanks",
  "Great": "Great",
  "address": "Address",
  "Hide_Now": "Hide Now",
  "the_account_is_hidden": "The account is hidden",
  "wallet_address": "Wallet Address",
  "upload_from_gallery": "Upload from gallery",
  "no_qr_found": "No QR code detected"
}