...
      testID={testID}
      style={[style(Layout, Gutters).container, containerStyle]}
    >
      <TouchableOpacity onPress={onPressLeftImage}>
        {!shouldShowCancel ? (
          <Image
            testID="left_image"
            style={{
              height: scale(24),
              width: scale(24),
            }}
            source={leftImage}
            resizeMode="contain"
...
