...
            okButtonType === 'primary' ? Colors.white : Colors.textError
          }
        />

        {onPressCancel && (
          <TextButton
            testId={'receive-token-modal-button-cancel'}
            onPress={() => {
              dismissReceivedTokenModal();
              setTimeout(() => {
                onPressCancel();
              }, 500);
            }}
...
