...
                />
              </>
            )}
            {activityTransactionInfo?.hash && currentTokenInfo?.explorerURL && (
              <>
                <BorderButton
                  testId={'ViewExplorer'}
                  text={t('common:view_transaction_on_explorer')}
                  onPress={() => {
                    Linking.openURL(
                      currentTokenInfo?.explorerURL?.replace(
                        '$tx',
                        activityTransactionInfo?.hash,
...
